--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="./src/index.tsx"></script>
+    <!-- 
+      <script src="https://cdn.jsdelivr.net/npm/web-streams-polyfill@3.2.1/dist/polyfill.min.js"></script> 
+    -->
   </body>
 </html>
